--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ body{
             padding: 10px;
             width: 50%;
             margin-left:auto; margin-right:auto;
+            font-size: 18px;
         }
 
     </style>
